--- a/album.html
+++ b/album.html
@@ -8,6 +8,6 @@
 </head>
 <body>
      <h1>This is angel</h1>
-    <img src="https://data.whicdn.com/images/333215597/original.jpg" alt="love">
+    <img src="https://data.whicdn.com/images/333215597/original.jpg" alt="loveer">
 </body>
 </html>
